--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
+		<link rel="icon" type="image/png" href={`${import.meta.env.BASE_URL}logo.png`} />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="CuestionaBle Mentorship - Conecta con mentores que te acompañan a potenciar tu perfil profesional y tus proyectos con herramientas de Business Intelligence." />
 
