--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@
 
 		<title>CuestionaBle Mentorship - Mentorías Personalizadas</title>
 	</head>
-	<body class="min-h-screen">
+	<body class="min-h-screen bg-gradient-hero">
 		<slot />
 	</body>
 </html>
